unpackaged/main/default/objects/project_cloud__Invoice__c/fields/project_cloud__Account__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Account that this invoice is related to</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>