unpackaged/main/default/objects/project_cloud__Invoice__c/fields/project_cloud__Date_Due__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Date_Due__c</fullName>
    <inlineHelpText>The date that the invoice is due</inlineHelpText>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>