unpackaged/main/default/objects/project_cloud__Invoice__c/fields/project_cloud__Date_Received__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Date_Received__c</fullName>
    <inlineHelpText>The date that the invoice was paid</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>