unpackaged/main/default/objects/project_cloud__Invoice__c/fields/project_cloud__Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Date_Sent__c</fullName>
    <inlineHelpText>The date that the invoice was sent to the client</inlineHelpText>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>