unpackaged/main/default/objects/project_cloud__Invoice__c/fields/project_cloud__PO_Number__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__PO_Number__c</fullName>
    <inlineHelpText>The PO number supplied by the client</inlineHelpText>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>