unpackaged/main/default/objects/project_cloud__Invoice__c/fields/project_cloud__Project_Milestone__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Milestone</label>
    <referenceTo>project_cloud__Project_Milestone__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>