unpackaged/main/default/objects/project_cloud__Invoice__c/fields/project_cloud__Terms__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Terms__c</fullName>
    <inlineHelpText>The payment terms for the invoice</inlineHelpText>
    <label>Terms (Net Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>