unpackaged/main/default/objects/project_cloud__Invoice__c/fields/project_cloud__Total_Rollup__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Total_Rollup__c</fullName>
    <inlineHelpText>The total from all the invoice line items</inlineHelpText>
    <label>Rollup Total</label>
    <summarizedField>project_cloud__Invoice_Line_Item__c.project_cloud__Total__c</summarizedField>
    <summaryForeignKey>project_cloud__Invoice_Line_Item__c.project_cloud__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>